fix: renamed login.css to style.css
The style.css file will be used for mutiple HTML files. So, it was renamed to avoid confusion.

--- a/mookit_downloader/templates/mookit_downloader/login.html
+++ b/mookit_downloader/templates/mookit_downloader/login.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'mookit_downloader/login.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'mookit_downloader/style.css' %}">
     <title>Login - Mookit Downloader</title>
 </head>
 <body>
